--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-photo-gallery": "^8.0.0",
     "react-router-dom": "^6.11.1",
     "react-tabs": "^6.0.1",
+    "react-toastify": "^9.1.3",
     "sort-by": "^1.2.0",
     "sweetalert2": "^11.7.5"
   },
